# Hashcatizer

./: .gitignore  CONTRIBUTING.md  CREDITS.md  Cargo.toml  LICENSE  README.md  hashcatizer.py  requirements.txt  setup.py
.github/workflows/: ci.yml  test-converters.yml
converters/: __init__.py  ansible2hashcat.py  atmail2hashcat.py  batch_converters.py  bitcoin2hashcat.py  bitlocker2hashcat.py  bitwarden2hashcat.py  blockchain2hashcat.py  cisco2hashcat.py  dmg2hashcat.py  electrum2hashcat.py  encfs2hashcat.py  ethereum2hashcat.py  extended_converters.py  ios2hashcat.py  keepass2hashcat.py  lastpass2hashcat.py  ldif2hashcat.py  lion2hashcat.py  luks2hashcat.py  mac2hashcat.py  mongodb2hashcat.py  mozilla2hashcat.py  netntlm2hashcat.py  network2hashcat.py  office2hashcat.py  onepassword2hashcat.py  pcap2hashcat.py  pdf2hashcat.py  pgpdisk2hashcat.py  pgpsda2hashcat.py  pgpwde2hashcat.py  pwsafe2hashcat.py  sap2hashcat.py  sevenz2hashcat.py  signal2hashcat.py  ssh2hashcat.py  telegram2hashcat.py  truecrypt2hashcat.py  vdi2hashcat.py  (+2 more)
lib/: __init__.py  common.py  detect.py
src/: common.rs  detect.rs  main.rs
src/converters/: aix.rs  andotp.rs  androidbackup.rs  androidfde.rs  ansible.rs  applenotes.rs  atmail.rs  axcrypt.rs  bestcrypt.rs  bitcoin.rs  bitlocker.rs  bitwarden.rs  bks.rs  blockchain.rs  cardano.rs  ccache.rs  cisco.rs  coinomi.rs  dashlane.rs  deepsound.rs  diskcryptor.rs  dmg.rs  dpapimk.rs  ecryptfs.rs  ejabberd.rs  electrum.rs  encfs.rs  enpass.rs  ethereum.rs  fvde.rs  geli.rs  gitea.rs  hccapx.rs  htdigest.rs  ikescan.rs  ios.rs  iwork.rs  kdcdump.rs  keepass.rs  keplr.rs  (+49 more)
tests/: __init__.py
