[package]
name = "hashcatizer"
version = "2.0.0"
edition = "2021"
description = "Blazing-fast hashcatizer — converts encrypted files to hashcat-compatible format"
authors = ["Hashcatizer Contributors"]

[[bin]]
name = "hashcatizer"
path = "src/main.rs"

[dependencies]
clap             = { version = "4", features = ["derive"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
hex              = "0.4"
base64           = "0.22"
quick-xml        = "0.36"
plist            = "1"
rusqlite         = { version = "0.31", features = ["bundled"] }
aes              = "0.8"
cbc              = "0.1"
cipher           = "0.4"
regex            = "1"
once_cell        = "1"
cfb              = "0.10"

[profile.release]
opt-level      = 3
lto            = true
codegen-units  = 1
panic          = "abort"
strip          = true
